syntax = "proto3";

package apparmor_prompting;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service AppArmorPrompting {
    rpc GetCurrentPrompt (google.protobuf.Empty) returns (GetCurrentPromptResponse);
    rpc ReplyToPrompt (PromptReply) returns (PromptReplyResponse);
    rpc ResolveHomePatternType (google.protobuf.StringValue) returns (ResolveHomePatternTypeResponse);
}

message PromptReply {
    string prompt_id = 1;
    Action action = 2;
    Lifespan lifespan = 3;
    oneof prompt_reply {
        HomePromptReply home_prompt_reply = 4;
    }
}

message PromptReplyResponse {
    PromptReplyType prompt_reply_type = 1;
    string message = 2;
    enum PromptReplyType {
        SUCCESS = 0;
        UNKNOWN = 1;
        PROMPT_NOT_FOUND = 2;
    }
}

enum Action {
    ALLOW = 0;
    DENY = 1;
} 

enum Lifespan {
    SINGLE = 0;
    SESSION = 1;
    FOREVER = 2;
}

message GetCurrentPromptResponse {
    oneof prompt {
        HomePrompt home_prompt = 1;
    }
}

message HomePromptReply {
   string path_pattern = 1;
   repeated string permissions = 2;
}

message HomePrompt {
    MetaData meta_data = 1;
    string requested_path = 2;
    string home_dir = 3;
    repeated string requested_permissions = 4;
    repeated string available_permissions = 5;
    repeated string initial_permissions = 6;
    repeated PatternOption pattern_options = 7;
    int32 initial_pattern_option = 8;
    message PatternOption {
        HomePatternType home_pattern_type = 1;
        string path_pattern = 2;
        bool show_initially = 3;
    }
}

enum HomePatternType {
    REQUESTED_DIRECTORY = 0;
    REQUESTED_FILE = 1;
    TOP_LEVEL_DIRECTORY = 2;
    CONTAINING_DIRECTORY = 3;
    HOME_DIRECTORY = 4;
    MATCHING_FILE_EXTENSION = 5;
}

message MetaData {
    string prompt_id = 1;
    string snap_name = 2;
    string store_url = 3;
    string publisher = 4;
    string updated_at = 5;
}

message ResolveHomePatternTypeResponse {
   HomePatternType home_pattern_type = 1; 
}
